# Geometry

./: CMakeLists.txt
include/geometry/: basic_line.hpp  basic_point.hpp  traits.hpp
include/geometry/algorythms/: distance.hpp  equivalent.hpp  intersect.hpp  parallel.hpp
include/geometry/flat/: line.hpp  point.hpp  segment.hpp
include/geometry/spatial/: line.hpp  point.hpp
tests/: CMakeLists.txt  distance.cpp  intersect.cpp  line.cpp  point.cpp
